Fixed wrapping on link

--- a/less/main/components/Continue.less
+++ b/less/main/components/Continue.less
@@ -29,6 +29,7 @@
 
 .Continue-target {
   text-decoration: underline;
+  white-space:     nowrap;
 }
 
 .Form {
